Updating index.html and 2section.svg image

--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
           <li>
             <article>
               <img src="images/3section.svg" alt="значок першої карточки" />
-              <p>
+              <h4>
                 Всі наші косметологи мають вищу медичну освіту та стаж роботи
                 від 5 років
-              </p>
+              </h4>
             </article>
           </li>
           <li>
             <article>
               <img src="images/3section2.svg" alt="значок другої карточки" />
-              <p>
+              <h4>
                 Використовуємо тільки професійне обладнання та косметику,
                 перевірену часом
-              </p>
+              </h4>
             </article>
           </li>
           <li>
             <article>
               <img src="images/3section3.svg" alt="значок третьої карточки" />
-              <p>
+              <h4>
                 Наша мета - підкреслити переваги та приховати недоліки, а не
                 переробити
-              </p>
+              </h4>
             </article>
           </li>
         </ul>
@@ -109,11 +109,13 @@
           </li>
           <li>
             <article>
+              <h3>Lorem, ipsum dolor.</h3>
               <!-- фото обличчя зі шприцом -->
             </article>
           </li>
           <li>
             <article>
+              <h3>Lorem, ipsum dolor.</h3>
               <!-- фото зі щіткою на обличчі -->
             </article>
           </li>
