--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
     <title>Beauty Zone</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
@@ -13,25 +21,29 @@
           <img src="images/logo.svg" alt="Logo" />
         </a>
         <ul>
-          <li><a href="#information-section">Про нас</a></li>
-          <li><a href="#features-section">Чому ми</a></li>
-          <li><a href="#procedures-section">Наші процедури</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li>
+            <a class="header-link" href="#information-section">Про нас</a>
+          </li>
+          <li><a class="header-link" href="#features-section">Чому ми</a></li>
+          <li>
+            <a class="header-link" href="#procedures-section">Наші процедури</a>
+          </li>
+          <li><a class="header-link" href="#contacts-section">Контакти</a></li>
         </ul>
         <address>
           <ul>
             <li>
-              <a href="#">
+              <a class="header-icon" href="#">
                 <!-- phone icon  -->
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="header-icon" href="#">
                 <!-- Facebook icon -->
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="header-icon" href="#">
                 <!-- Instagram icon -->
               </a>
             </li>
@@ -42,119 +54,147 @@
     <main>
       <section>
         <p>Косметологічна клініка</p>
-        <h1>Beauty zone</h1>
-        <button type="button">Замовити дзвінок</button>
-        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+        <h1 class="hero-title">Beauty<br />zone</h1>
+        <button class="button" type="button">Замовити дзвінок</button>
+        <p class="hero-text">
+          Запишись та отримай безкоштовну <br />
+          консультацію нашого косметолога
+        </p>
       </section>
-      <section id="information-section">
-        <h2>Перевтілюйтесь в <span>beauty zone!</span></h2>
-        <p>
+      <section id="information-section" class="information-section">
+        <h2 class="section-title information">
+          Перевтілюйтесь <br />
+          в <span class="brand">beauty zone!</span>
+        </h2>
+        <p class="information-text">
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
           за шкірою обличчя та тіла.
         </p>
         <img
-          src="images/2section.jpg"
+          src="images/2womanface_before.jpg"
           alt="Резульат до процедур на обличчі жінки"
         />
-        <p>
-          B <span>beauty zone</span> ми гарантуємо найвищі стандарти якості та
-          приємний сервіс. Наші косметологічні процедури та препарати допоможуть
-          вам підтримувати свою красу та молодість. З нами краса назавжди!
+        <p class="information-text">
+          B <span class="accent">beauty zone</span> ми гарантуємо найвищі
+          стандарти якості та приємний сервіс. Наші косметологічні процедури та
+          препарати допоможуть вам підтримувати свою красу та молодість. З нами
+          краса назавжди!
         </p>
         <img
-          src="images/2section2.jpg"
+          src="images/2womanface_after.jpg"
           alt="Резульат після процедур на обличчі жінки"
         />
       </section>
       <section id="features-section">
-        <h2>Чому люди <span>обирають нас</span></h2>
+        <h2 class="section-title">
+          Чому люди <br />
+          <span class="accent">обирають нас</span>
+        </h2>
         <ul>
           <li>
-            <article>
-              <img src="images/3section.svg" alt="значок першої карточки" />
-              <h4>
+            <article class="feature-card">
+              <h3>
+                <img src="images/3section.svg" alt="значок першої карточки" />
+              </h3>
+              <p>
                 Всі наші косметологи мають вищу медичну освіту та стаж роботи
-                від 5 років
-              </h4>
+                від 5 років/p>
+              </p>
             </article>
           </li>
           <li>
-            <article>
-              <img src="images/3section2.svg" alt="значок другої карточки" />
-              <h4>
+            <article class="feature-card">
+              <h3>
+                <img src="images/3section2.svg" alt="значок другої карточки" />
+              </h3>
+              <p>
                 Використовуємо тільки професійне обладнання та косметику,
                 перевірену часом
-              </h4>
+              </p>
             </article>
           </li>
           <li>
-            <article>
-              <img src="images/3section3.svg" alt="значок третьої карточки" />
-              <h4>
+            <article class="feature-card">
+              <h3>
+                <img src="images/3section3.svg" alt="значок третьої карточки" />
+              </h3>
+              <p>
                 Наша мета - підкреслити переваги та приховати недоліки, а не
                 переробити
-              </h4>
+              </p>
             </article>
           </li>
         </ul>
       </section>
       <section id="procedures-section">
-        <h2>Наші <span>процедури</span></h2>
+        <h2 class="section-title">
+          Наші <span class="accent">процедури</span>
+        </h2>
         <ul>
           <li>
             <article>
-              <h3>Маски для обличчя</h3>
+              <h3 class="procedure-card">Маски для обличчя</h3>
               <!-- фото з маскою на обличчя -->
             </article>
           </li>
           <li>
             <article>
-              <h3>Lorem, ipsum dolor.</h3>
+              <h3 class="procedure-card">Ін'єкції для обличчя</h3>
               <!-- фото обличчя зі шприцом -->
             </article>
           </li>
           <li>
             <article>
-              <h3>Lorem, ipsum dolor.</h3>
+              <h3 class="procedure-card">Очищення обличчя</h3>
               <!-- фото зі щіткою на обличчі -->
             </article>
           </li>
         </ul>
       </section>
       <section id="contacts-section">
-        <h2>Як нас <span>знайти</span></h2>
+        <h2 class="section-title">Як нас <span class="accent">знайти</span></h2>
         <iframe
+          class="contact-map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.476474136308!2d30.775235599999995!3d50.506700699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0LLRg9C70LjRhtGPINCi0LDRgNCw0YHQsCDQqNC10LLRh9C10L3QutCwLCA1LCDQkdGA0L7QstCw0YDQuCwg0JrQuNGX0LLRgdGM0LrQsCDQvtCx0LsuLCAwNzQwMA!5e0!3m2!1suk!2sua!4v1703363839139!5m2!1suk!2sua"
-          width="600"
-          height="450"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <nav>
         <a href="./index.html">
           <img src="images/logo.svg" alt="Logo" />
         </a>
         <ul>
-          <li><a href="#information-section">Про нас</a></li>
-          <li><a href="#features-section">Чому ми</a></li>
-          <li><a href="#procedures-section">Наші процедури</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li>
+            <a class="footer-link" href="#information-section">Про нас</a>
+          </li>
+          <li><a class="footer-link" href="#features-section">Чому ми</a></li>
+          <li>
+            <a class="footer-link" href="#procedures-section">Наші процедури</a>
+          </li>
+          <li><a class="footer-link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+            <a class="address-link" href="tel:+380960000007"
+              >+ 38 (096) 000 00 07</a
+            >
           </li>
           <li>
-            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+            <a class="address-link" href="mailto:beautyzone@gmail.com"
+              >beautyzone@gmail.com</a
+            >
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/K5u7GD1GN9C9igZdA" target="_blank"
+            <a
+              class="address-link"
+              href="https://maps.app.goo.gl/K5u7GD1GN9C9igZdA"
+              target="_blank"
               >Україна, м. Київ, вул. Тараса Шевченка 5</a
             >
           </li>
@@ -174,8 +214,10 @@
             </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>&copy; 2022 Дані захищені</p>
+        <a class="address-link" href="#" target="_blank"
+          >Політика конфіденційності</a
+        >
+        <p class="address-copyright">&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
