--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <section>
         <p>Косметологічна клініка</p>
-        <h1 class="hero-title">Beauty<br />zone</h1>
+        <h1 lang="en" class="hero-title">Beauty<br />zone</h1>
         <button class="button" type="button">Замовити дзвінок</button>
         <p class="hero-text">
           Запишись та отримай безкоштовну <br />
